--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -1,3 +1,6 @@
 {
-    "VIDEO_CALL": "Video call"
+    "VIDEO_CALL": "Video call",
+    "EMAIL_PLACEHOLDER": "Email",
+    "PASSWORD_PLACEHOLDER": "Password",
+    "BTN_SIGNIN_EMAIL": "Signin"
 }
