--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -28,5 +28,8 @@
     "ADD_FRIEND_SUCCESS": "Add friend successfully!",
     "SOMETHING_WENT_WRONG": "Something went wrong!",
     "OK": "Ok",
-    "NO_DATA_FOUND": "No data found."
+    "NO_DATA_FOUND": "No data found.",
+    "WAITTING_ACCEPT": "Waitting accept.",
+    "ACCEPT_FRIEND": "Accept friend",
+    "CONFIRM_ACCEPT_FRIEND": "Do you want accept this friend?"
 }
